--- a/todo-app-large/package.json
+++ b/todo-app-large/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-app",
+  "name": "todo-app-large",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-virtualized": "^9.21.2"
   },
   "scripts": {
     "start": "react-scripts start",
