--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
-    "editor.renderWhitespace": "all", 
+    "editor.renderWhitespace": "all",
     "editor.formatOnSave": false,
     "[javascript]": {
         "editor.formatOnSave": true
+    },
+    "[typescript]": {
+      "editor.formatOnSave": true
+    },
+    "[typescriptreact]": {
+      "editor.formatOnSave": true
     }
 }
